# productive-mcp

./: .gitignore  README.md  install.sh  pyproject.toml
src/productive_mcp/: __init__.py  cli.py  client.py  models.py  query.py  server.py
